# Aria

./: README.md
aria_2ndparty/: CMakeLists.txt  package.xml
aria_2ndparty/.svn/: entries
aria_2ndparty/.svn/text-base/: CMakeLists.txt.svn-base  package.xml.svn-base
aria_2ndparty/launch/: dynamixel.yaml  gripper.launch  head.launch  second_party.launch
aria_2ndparty/scripts/: wav_handler.py  wav_size.py
aria_2ndparty/src/: second_party_controller.cc  second_party_core.cc
aria_2ndparty/src/actuators/: ssb_actuators_dynamixel.h  ssb_actuators_kduinoservo.h  ssb_actuators_virtual.h  virtual_aria.h
aria_2ndparty/src/actuators/dynamixel_msgs/: JointState.h  MotorState.h
aria_2ndparty/src/actuators/dynamixel_msgs/.svn/: entries
aria_2ndparty/src/actuators/dynamixel_msgs/.svn/text-base/: MotorStateList.h.svn-base
aria_2ndparty/src/actuators/kduino/.svn/: entries
aria_2ndparty/src/actuators/kduino/.svn/text-base/: KduinoServo.h.svn-base
aria_2ndparty/src/common/: ssb_common_common.h  ssb_common_enum.h  ssb_common_files.h  ssb_common_of.cc  ssb_common_of.h  ssb_common_subscriber.h  ssb_common_vec-inl.h  ssb_common_vec.cc  ssb_common_vec.h
aria_2ndparty/src/sensors/: ssb_sensors_sound.h  ssb_sensors_voice.h
aria_2ndparty/src/utils/: ssb_utils_interpolation.cc  ssb_utils_interpolation.h  ssb_utils_keyframe-inl.h  ssb_utils_keyframe.h  ssb_utils_model.cc  ssb_utils_model.h
aria_model/: CMakeLists.txt  aria.yaml  cp-aria.sh  gen-aria.l  gen-aria.sh  gen-sasabody.l  gen-sasabody.sh  link.dat.bk.30112014  package.xml
aria_model/dae/: RIC Inaba Torso ARM L JOINT1.dae  RIC Inaba Torso ARM L JOINT2.dae  RIC Inaba Torso ARM L JOINT3.dae  RIC Inaba Torso ARM L JOINT4.dae  RIC Inaba Torso ARM L JOINT5.dae  RIC Inaba Torso ARM L JOINT6.dae  RIC Inaba Torso ARM L JOINT7.dae  RIC Inaba Torso ARM R JOINT1.dae  RIC Inaba Torso ARM R JOINT2.dae  RIC Inaba Torso ARM R JOINT3.dae  RIC Inaba Torso ARM R JOINT4.dae  RIC Inaba Torso ARM R JOINT5.dae  RIC Inaba Torso ARM R JOINT6.dae  RIC Inaba Torso ARM R JOINT7.dae  RIC Inaba Torso NECK1.dae  RIC Inaba Torso NECK2.dae  RIC Inaba Torso NECK3.dae  RIC Inaba Torso typeL BODY v2.dae  RIC Inaba Torso typeL HIP2 v2.dae  RIC Inaba Torso typeL HIP3 v2.dae  RIC Torso type L ARM L HAND1.dae  RIC Torso type L ARM R HAND1.dae  aria_eye.dae  aria_head_simple.dae
aria_model/euslisp/: aria-beer.l  aria-interface.l  aria-interpolator.l  aria-minjerk-interpolator.l  aria-simulator.l  bspline.l  robot-joint-angle-slider.l  torque-util.l
aria_model/src/: state_publisher.cc  virtual_state_publisher.cc
aria_model/stl/: stl2dae.sh
aria_utils/: CMakeLists.txt  package.xml
aria_utils/html/: aria_utils.html  aria_utils.js
aria_utils/launch/: aria_utils.launch  demo.launch
aria_utils/motions/: angry  angry.py  beats_me  beats_me.py  bye_bye  cheers  cheers.py  clap  clap.py  cry.py  cry1  darn  darn.py  donbiki  guruguru  handshake  handshake.py  happy  have_a_drink  height  high_five  hug  hug.py  kyrokyro  kyrokyro.py  look_away  look_away.py  mope  nod_no  nod_no.py  nod_yes  nod_yes.py  nonono  okay  okay.py  pad_my_back  pokapoka  question  question.py  re_turn  (+13 more)
aria_utils/sample_motions/: bye_bye.py  donbiki.py  guruguru.py  happy.py  have_a_drink.py  height.py  high_five.py  mope.py  nonono.py  pad_my_back.py  pokapoka.py  re_turn.py  tilt_forward.py  turn.py  turn_back.py
aria_utils/scripts/: aria  aria.bash  aria.py  aria_echo.sh  ariacore  bashcmdbkup  demo.py  eus-aria-webcommands.l  eus-keyboard.l  fix_pyscript.sh  gen_motionpy.sh  gen_voice2pose.sh  initializer.l  initializer.py  initializer2.py  interpolation_wrapper.py  interpolation_wrapper2.py  voice_to_pose.txt  webcommands.py
aria_utils/settings/: id_map.yaml  initial_pose.yaml  offset.yaml  pid_gain.yaml  sgn.yaml
aria_utils/settings_type2/: id_map.yaml  pid_gain.yaml
aria_utils/src/: aria.h  interactive_pose_maker.cc  ps3_to_web.cc  virtual_mcu_core.cc  voice_to_pose.cc
eus_eigen/: CMakeLists.txt  package.xml
eus_eigen/euslisp/: eus_eigen.l
invented_pendulum/: CMakeLists.txt  package.xml
invented_pendulum/euslisp/: aria-commander.l  aria-pendulum-state.l  aria-viewer.l  invented-pendulum.l  observed-state-feedback.l  ros-invented-pendulum-node.l  sasabody-commander.l  sasabody-pendulum-state.l  sasabody-pendulum.l  sasabody-viewer.l
invented_pendulum/launch/: invented_pendulum.launch
invented_pendulum/shell/: command_line_controller.sh  node_check.sh
ros2http/: CMakeLists.txt  build.gradle  package.xml  settings.gradle
ros2http/gradle/wrapper/: gradle-wrapper.properties
ros2http/ros2http_converter/: .classpath  .project  build.gradle
ros2http/ros2http_converter/eus_eigen/: Makefile  cmake_install.cmake
ros2http/ros2http_converter/eus_eigen/euslisp/: eus_eigen.l
ros2http/ros2http_converter/eus_eigen/src/: eus_eigen.cpp
ros2http/ros2http_converter/euslisp/: imu_publisher.l  kduino_imu_converter.l  sample_json_publisher.l  sasabody-test.l  sasabody-test2.l
ros2http/ros2http_converter/float2string/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  test
ros2http/ros2http_converter/invented_pendulum/: invented-pendulum.l  observed-state-feedback.l
ros2http/ros2http_converter/launch/: aria_socket.launch  currentor.launch  robot_pose_ekf.launch  urdf.launch  virtual_urdf.launch
ros2http/ros2http_converter/scripts/: currentor_socket.sh  ros2http_listener.sh  test.sh
utils/: package.xml
utils/scripts/: #eus-aria-webcommands.l#  .#eus-aria-webcommands.l  eus-aria-webcommands.l  eus-aria-webcommands.l~  eus-keyboard.l  eus-keyboard.l~  initializer.l  initializer.l~
utils/settings/: pid_gain.yaml
(+7 files in other folders)
