<?xml version="1.0"?>
<package>
  <name>eus_eigen</name>
  <version>0.1.0</version>
  <description>The eus_eigen package</description>
  <maintainer email="s-noda@jsk.t.u-tokyo.ac.jp">s-noda</maintainer>
  <license>NYSL</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
</package>
